# Sciqlop-cache

./: .bumpversion.cfg  .gitignore  CLAUDE.md  Makefile  README.md  meson.build  meson_options.txt  pyproject.toml
.github/workflows/: CI.yml  tests-with-coverage.yml
benchmark/: bench_valuesize.py  main.py  plot_scaling.py  plot_valuesize.py  scaling.py
database/: sciqcache.sql
docs/plans/: 2026-03-09-bugfixes-and-perf.md
docs/superpowers/plans/: 2026-03-10-fanout-store.md  2026-03-11-check-command.md
docs/superpowers/specs/: 2026-03-10-fanout-store-design.md  2026-03-11-torture-tests-design.md
include/sciqlop_cache/: cache_by_files.hpp  database.hpp  db.hpp  disk_storage.hpp  fanout_store.hpp  policies.hpp  sciqlop_cache.hpp  store.hpp
include/sciqlop_cache/utils/: buffer.hpp  concepts.hpp  time.hpp
include/utils/: time.hpp
pysciqlop_cache/: __init__.py  meson.build  migrate.py  pysciqlop_cache.cpp  serializers.py
subprojects/hedley-15/: .meson-subproject-wrap-hash.txt
subprojects/sqlite-amalgamation-3490200/: .meson-subproject-wrap-hash.txt
tests/: common.hpp  main.cpp
tests/basic/: main.cpp
tests/basic_index/: main.cpp
tests/bench_perf/: main.cpp
tests/benchmark/: main.py
tests/check/: main.cpp
tests/concurrency_bugs/: main.cpp
tests/database/: main.cpp
tests/example/: main.cpp
tests/fanout/: main.cpp
tests/fork_safety/: main.cpp
tests/multithreads/: main.cpp
tests/python/: test_concurrency_bugs.py  test_fork_safety.py  test_hypothesis.py  test_perf_vs_diskcache.py  test_python_interface.py  test_python_multiprocess.py  test_serializers.py  test_torture.py
tests/torture/: main.cpp
